--- a/docs/source/examples/Running_ONTraC_on_stereo_seq_dataset.ipynb
+++ b/docs/source/examples/Running_ONTraC_on_stereo_seq_dataset.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "This notebook will show you the process of running ONTraC on stereo-seq data.\n",
     "\n",
-    "We assume that you have installed ONTraC according to the [installation tutorial](../../tutorials/installation.md) and open this notebook using installed Python kernel (Python 3.11 (ONTraC))."
+    "We assume that you have installed ONTraC according to the [Installation Tutorial](../installation.md) and open this notebook using installed Python kernel (Python 3.11 (ONTraC))."
    ]
   },
   {
@@ -49,7 +49,7 @@
    "id": "36140acb",
    "metadata": {},
    "source": [
-    "Download `stereo_seq_dataset.csv` from [Zenodo](https://zenodo.org/records/11186620)"
+    "Download `stereo_input.csv` from the [Zenodo Dataset repository](https://zenodo.org/records/15571644/files/Stereo_seq_data.zip) under `preprocessing` directory."
    ]
   },
   {
@@ -87,7 +87,7 @@
    "id": "09954c28-40ee-47b2-aed6-84347db37be7",
    "metadata": {},
    "source": [
-    "Please see [post analysis tutorial](../../tutorials/post_analysis.md) for details."
+    "Please see the [Visualiztion Tutorial](../tutorials/visualization.ipynb) for details."
    ]
   },
   {
