--- a/docs/source/examples/Running_ONTraC_on_stereo_seq_dataset.ipynb
+++ b/docs/source/examples/Running_ONTraC_on_stereo_seq_dataset.ipynb
@@ -28,6 +28,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "74b4fdef",
+   "metadata": {},
+   "source": [
+    "## Dataset Explanation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "632b5fe0",
+   "metadata": {},
+   "source": [
+    "The Stereo-seq mouse embryonic midbrain dataset was originally published by [Chen, et al](https://doi.org/10.1016/j.cell.2022.04.003). The raw data could be download from [the MOSTA website](https://db.cngb.org/stomics/mosta/download/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6a0effb2-2cee-4f98-b519-8f70bdc03933",
    "metadata": {},
    "source": [
