--- a/docs/source/examples/Running_ONTraC_on_stereo_seq_dataset.ipynb
+++ b/docs/source/examples/Running_ONTraC_on_stereo_seq_dataset.ipynb
@@ -249,12 +249,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "89e1369f-e192-4e71-b790-7792ffb6bfbb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Other Resources\n",
+    "\n",
+    "- [ONTraC results visualization](../tutorials/visualization.ipynb)\n",
+    "\n",
+    "- [Spatial trajectory-based analysis](../tutorials/st_based_analysis.ipynb)\n"
+   ]
   }
  ],
  "metadata": {
